--- a/samconfig.toml
+++ b/samconfig.toml
@@ -21,7 +21,7 @@ region = "eu-west-1"
 image_repositories = []
 
 [default.package.parameters]
-resolve_s3 = true
+#resolve_s3 = true
 
 [default.sync.parameters]
 watch = true
