Correct typo in YAML file
Changed the DeploymentPreference type from 'Canary10Percent5Minute' to 'Canary10Percent5Minutes'. This correction aligns with the expected configuration syntax and ensures proper deployment behavior.

--- a/template.yaml
+++ b/template.yaml
@@ -19,7 +19,7 @@ Resources:
       Runtime: nodejs20.x
       AutoPublishAlias: live
       DeploymentPreference:
-        Type: Canary10Percent5Minute
+        Type: Canary10Percent5Minutes
       Architectures:
         - x86_64
       Events:
